# hs-rsync

./: README.md  hs-rsync.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
