name:                hs-rsync
version:             0.1.0.0
synopsis:            An rsync implementation pure Haskell
description:         RSync in pure Haskell
homepage:            http://github.com/vu3rdd/hs-rsync#readme
license:             GPL-3
license-file:        LICENSE
author:              Ramakrishnan Muthukrishnan
maintainer:          ram@rkrishnan.org
copyright:           2015 Ramakrishnan Muthukrishnan
category:            Console
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptohash
                     , digest
                     , mtl
  default-language:    Haskell2010

executable hs-rsync-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hs-rsync
  default-language:    Haskell2010

test-suite hs-rsync-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-rsync
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vu3rdd/hs-rsync
